oxiplate-derive/tests/config/expected/array-of-tables.stderr
error: Failed to parse `/oxiplate.toml`: Expected a string, found: DoubleBracketOpen[[[]
 --> tests/broken/array-of-tables.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
